--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
 <html>
-하하하하하
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>시간표</title>
+	</head>
+	<body>
+		<h1>공강은 없습니다.</h1>
+		<p>하지만 하루를 빼고 모두 오후 수업이라 마음은 편안합니다.</p> 
+	</body>
 </html>
